fixed cat image container: lowered transparency of top of box so moon visible, fixed lower margin to improve rendering of background gradient.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,15 @@ body {
 }
 
 .container {
-width: 500px;
-max-width: 75vw;
-margin: 10vmin auto;
-text-align: center;
-padding: 30px;
-background: linear-gradient(rgb(182, 132, 83), rgb(164, 112, 60)) ;
-border-radius: 10px;
-box-shadow: 1px 1px 7px #000;
-} 
+    width: 500px;
+    max-width: 75vw;
+    margin: 10vmin auto 60vh auto;
+    text-align: center;
+    padding: 30px;
+    background: linear-gradient(rgba(180, 132, 83, .3), rgba(164, 112, 60, 1));
+    border-radius: 10px;
+    box-shadow: 1px 1px 7px #000;
+}
 
 h1 {
   margin-top: -15px;
